# Polimorpheus

./: .gitignore  README.md
Лабы/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Do not readme  Laba1.sln  dynamic_array.c  dynamic_array.h  main.c  person.c  person.h  student.c  student.h  teacher.c  teacher.h
Лабы 2/ConsoleApplication1/: ASequence.hpp  Cardinal.hpp  CardinalTests.cpp  CardinalTests.hpp  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  LazySequence.cpp  LazySequence.hpp  LazySequenceTests.cpp  LazySequenceTests.hpp  Sequence.hpp  SmartPointer.hpp  SmartPointerTests.hpp  Tape.hpp  TapeTests.hpp  Transition.hpp
Лабы 2/extra/: extra.sln
Лабы 2/lab2/: Main.cpp  hashtable.hpp  lab2.sln  lab2.vcxproj  lab2.vcxproj.filters  task.hpp  tests.hpp
Лабы/Laba1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  dynamic_array.c  dynamic_array.h  main.c  person.c  person.h  ГенераторЛюдей.ipynb
Лабы/Laba2/: ASequence._hpp  ASequence.hpp  ASequenceTests.cpp  ASequenceTests.hpp  DynamicArray.cpp  DynamicArray.hpp  DynamicArrayTests.cpp  DynamicArrayTests.hpp  ILLSequence._cpp  IMASequence.cpp  Laba2.cpp  (+21 more)
Линейная алгебра/: Do not read me  L-U разложение.ipynb  lb1_1.ipynb  ~$чёт лаба 1.docx  ЛА.сем.1.cpp  Число обусловленности.ipynb  отчёт лаба 1.docx
Линейная алгебра/graf/: CMakeLists.txt  graf.sln  graf.vcxproj  graf.vcxproj.filters
Линейная алгебра/graf/graf/x64/Debug/: vc143.idb
Линейная алгебра/graf/graf/x64/Debug/graf.tlog/: graf.lastbuildstate
(+103 files in other folders)
